--- a/index.html
+++ b/index.html
@@ -1,8 +1,53 @@
-<html>
-<head>
-   <title> IDESWEB </title>
-</head>
+<!DOCTYPE html>
 
-<body>
-    <h1> IDESWEB </h1>
+<html>
+
+  <head>
+
+    <meta charset="utf-8">
+
+    <title>My test page</title>
+
+    <link href='https://www.aeuroweb.com/mejor-navegador-web/' rel='stylesheet' type='text/css'>
+
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+
+  </head>
+
+  <body>
+
+    <h1>Chrome is cool</h1>
+
+    <img src="images/Chrome.png" alt="Google Chrome logo">
+
+
+
+    <p>Internet Explorer is not so bad of</p>
+
+    
+
+    <ul> <!-- changed to list in the tutorial -->
+
+      <li>technologists</li>
+
+      <li>thinkers</li>
+
+      <li>builders</li>
+
+    </ul>
+
+
+
+    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+
+
+
+    <p>Read the <a href="https://www.aeuroweb.com/mejor-navegador-web/">Mozilla Manifesto</a> to learn even more about the best navigator</p>
+
+  <button>Change user</button>
+
+  <script src="scripts/main.js"></script>
+
+  </body>
+
 </html>
