--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>My test page</title>
 
-    <link href='https://www.aeuroweb.com/mejor-navegador-web/' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <link href="styles/style.css" rel="stylesheet" type="text/css">
 
@@ -16,13 +16,13 @@
 
   <body>
 
-    <h1>Chrome is cool</h1>
+    <h1>Mozilla is cool</h1>
 
-    <img src="images/Chrome.png" alt="Google Chrome logo">
+    <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
 
 
-    <p>Internet Explorer is not so bad of</p>
+    <p>At Mozilla, we’re a global community of</p>
 
     
 
@@ -42,7 +42,7 @@
 
 
 
-    <p>Read the <a href="https://www.aeuroweb.com/mejor-navegador-web/">Mozilla Manifesto</a> to learn even more about the best navigator</p>
+    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
 
   <button>Change user</button>
 
