--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <h1>Mozilla is cool</h1>
 
-    <img src="images/Chrome.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+    <img src="images/Chrome.png" alt="Chrome, uno de los mejores navegadores.">
 
 
 
