--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
 
-    <title>My test page</title>
+    <title>Mi página web</title>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
