--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
+<!DOCTYPE html>
+
 <html>
-<head>
-  <title> Mi página </title>
+
+  <head>
+
+    <meta charset="utf-8">
+
+    <title> Mi página </title>
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+
   </head>
-  
+
   <body>
-    <h1> Mi página </h1>
-    </html>
+
+    <h1> Chrome is ok </h1>
+
+    <img src="Chrome.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+
+  <button>Change user</button>
+
+  <script src="scripts/main.js"></script>
+
+  </body>
+
+</html>
