--- a/index.html
+++ b/index.html
@@ -18,32 +18,31 @@
 
     <h1>Mozilla is cool</h1>
 
-    <img src="images/Chrome.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+    <img src="images/Chrome.png" alt= <img src= "images/Explorer.png">
 
 
 
-    <p>At Mozilla, we’re a global community of</p>
+    <p>Google chrome es un gran navegador que te permite:</p>
 
 
 
     <ul> <!-- changed to list in the tutorial -->
 
-      <li>technologists</li>
+      <li>Acceder a Internet</li>
 
-      <li>thinkers</li>
+      <li>Descargar juegos</li>
 
-      <li>builders</li>
+      <li>Buscar información</li>
 
     </ul>
 
 
 
-    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+    <p>Tener este navegador te será fundamental a lo largo de tu vida ya que es muy veloz, muy fácil de utilizar y muy práctico, además de estar disponible para muchos dispositivos</p>
 
 
 
-    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
-
+    <p>Pincha en este enlace <a href="  https://www.google.com/intl/es/chrome/"</a> ">Google Chrome</a> para descargar chrome</p>
   <button>Change user</button>
 
   <script src="scripts/main.js"></script>
