--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
 
-    <h1>Mozilla is cool</h1>
+    <h1>¿Que navegador elegirías tú?</h1>
 
     <img src="images/Chrome.png" alt= <img src= "images/Explorer.png">
 
@@ -42,7 +42,7 @@
 
 
 
-    <p>Pincha en este enlace <a href="  https://www.google.com/intl/es/chrome/"</a> ">Google Chrome</a> para descargar chrome</p>
+    <p>Pincha en este enlace <a href="  https://www.google.com/intl/es/chrome/"</a> "Google Chrome</a> para descargar chrome</p>
   <button>Change user</button>
 
   <script src="scripts/main.js"></script>
