--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 
   <body>
 
-    <h1>¿Que navegador elegirías tú?</h1>
+    <h1>Messi es mejor que Cristiano, asúmelo</h1>
 
-    <img src="images/Chrome.png" alt= <img src= "images/Explorer.png">
+    <img src="images/Messi.png" alt= <img src= "images/Cristiano.png">
 
 
 
-    <p>Google chrome es un gran navegador que te permite:</p>
+    <p>Messi es el mejor asistente y goleador de la historia del fútbol por lo siguiente:</p>
 
 
 
     <ul> <!-- changed to list in the tutorial -->
 
-      <li>Acceder a Internet</li>
+      <li>Tira las faltas como nadie</li>
 
-      <li>Descargar juegos</li>
+      <li>Tiene la mejor zurda de la historia</li>
 
-      <li>Buscar información</li>
+      <li>Ganó el sextete con el Barcelona</li>
 
     </ul>
 
@@ -42,7 +42,7 @@
 
 
 
-    <p>Pincha en este enlace <a href="  https://www.google.com/intl/es/chrome/"</a> "Google Chrome</a> para descargar chrome</p>
+    <p>Pincha en este enlace <a href="  https://es.wikipedia.org/wiki/Anexo:Estadísticas_de_Lionel_Messi"</a> "Messi"</a> para ver las estadísticas de Messi</p>
   <button>Change user</button>
 
   <script src="scripts/main.js"></script>
