--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <h1>Messi es mejor que Cristiano, asúmelo</h1>
 
-    <img src="images/Messi.png" alt= <img src= "images/Cristiano.png"> alt= "Messi es el mejor, asúmelo">
+    <img src="images/Messi.png" alt= <img src= "images/Cristiano.png">
 
 
 
