--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
 
 
-    <p>Pincha en este enlace <a href="  https://es.wikipedia.org/wiki/Anexo:Estadísticas_de_Lionel_Messi"</a> "Messi"</a> para ver las estadísticas de Messi</p>
+    <p>Pincha en este enlace <a href="  https://es.wikipedia.org/wiki/Anexo:Estadísticas_de_Lionel_Messi"</a> "Messi"</a> para ver las estadísticas de Messi
+  A continuación, podemos ver una imagen de uno de los mejores extremos del mundo, Neymar, quien no ha tenido una buena temporada <img src="images/Neymar.png"></p>
   <button>Change user</button>
 
   <script src="scripts/main.js"></script>
