--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h1>Messi es mejor que Cristiano, asúmelo</h1>
 
     <img src="images/Messi.png" alt= <img src= "images/Cristiano.png">
+    <iframe src="https://giphy.com/embed/2HavnYT1BfENa" width="480" height="274" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/goal-messi-highlightgifs-2HavnYT1BfENa">via GIPHY</a></p>
 
 
 
@@ -42,8 +43,7 @@
 
 
 
-    <p>Pincha en este enlace <a href="  https://es.wikipedia.org/wiki/Anexo:Estadísticas_de_Lionel_Messi"</a> "Messi"</a> para ver las estadísticas de Messi
-  A continuación, podemos ver una imagen de uno de los mejores extremos del mundo, Neymar, quien no ha tenido una buena temporada <img src="images/Neymar.png"></p>
+    <p>Pincha en este enlace <a href="  https://es.wikipedia.org/wiki/Anexo:Estadísticas_de_Lionel_Messi"</a> "Messi"</a> para ver las estadísticas de Messi.</p>
   <button>Change user</button>
 
   <script src="scripts/main.js"></script>
