--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>Messi es mejor que Cristiano, asúmelo</h1>
 
     <img src="images/Messi.png" alt= <img src= "images/Cristiano.png">
-    <iframe src="https://giphy.com/embed/2HavnYT1BfENa" width="480" height="274" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/goal-messi-highlightgifs-2HavnYT1BfENa">via GIPHY</a></p>
+    <iframe src="https://giphy.com/embed/2HavnYT1BfENa" width="400" height="200" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p>
 
 
 
