--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <h1>Messi es mejor que Cristiano, asúmelo</h1>
 
     <img src="images/Messi.png" alt= <img src= "images/Cristiano.png">
-    <div align="center"><p> Este es el mejor gol de Messi, contra el Getafe</p>
+    <p> Este es el mejor gol de Messi, contra el Getafe, en el cual parte de su campo regateando a todos los jugadores hasta definir a puerta vacía:</p>
     <div align="center"><iframe src="https://giphy.com/embed/2HavnYT1BfENa" width="400" height="180" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p>
-
-
+    <p>Esta es una imagen que personalmente me encanta, en la que messi sale con sus 6 balones de oro:</p>
+     
+    <img src="images/Balondeoro.png">
 
     <p>Messi es el mejor asistente y goleador de la historia del fútbol por lo siguiente:</p>
 
@@ -40,7 +41,7 @@
 
 
 
-    <p>Tener este navegador te será fundamental a lo largo de tu vida ya que es muy veloz, muy fácil de utilizar y muy práctico, además de estar disponible para muchos dispositivos</p>
+    <p> Lionel Andrés Messi Cuccittini es considerado por muchoes el mejor jugador de la historia del fútbol. A lo largo de su carrera ha ganado cuatro champions, ha sido varias veces bota de oro, y ha ganado 6 blones de oro, superando a Cristiano Ronaldo, quien tiene 5.</p>
 
 
 
