--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <img src="images/Messi.png" alt= <img src= "images/Cristiano.png">
     <p> Este es el mejor gol de Messi, contra el Getafe, en el cual parte de su campo regateando a todos los jugadores hasta definir a puerta vacía:</p>
     <div align="center"><iframe src="https://giphy.com/embed/2HavnYT1BfENa" width="400" height="180" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p>
-    <p>Esta es una imagen que personalmente me encanta, en la que messi sale con sus 6 balones de oro:</p>
+    <div align="left"><p>Esta es una imagen que personalmente me encanta, en la que messi sale con sus 6 balones de oro:</p>
      
-    <img src="images/Balondeoro.png">
+    <div align="center"><img src="images/Balondeoro.png">
 
-    <p>Messi es el mejor asistente y goleador de la historia del fútbol por lo siguiente:</p>
+    <div align="left"><p>Messi es el mejor asistente y goleador de la historia del fútbol por lo siguiente:</p>
 
 
 
