--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     <img src="images/Messi.png" alt= <img src= "images/Cristiano.png">
     <p> Este es el mejor gol de Messi, contra el Getafe, en el cual parte de su campo regateando a todos los jugadores hasta definir a puerta vacía:</p>
-    <div align="center"><iframe src="https://giphy.com/embed/2HavnYT1BfENa" width="400" height="180" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p>
+    <div align="center"><iframe src="https://giphy.com/embed/2HavnYT1BfENa" width="400" height="180" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p></div align="center">
     <div align="left"><p>Esta es una imagen que personalmente me encanta, en la que messi sale con sus 6 balones de oro:</p>
      
-    <div align="center"><img src="images/Balondeoro.png">
+    <img src="images/Balondeoro.png">
 
-    <div align="left"><p>Messi es el mejor asistente y goleador de la historia del fútbol por lo siguiente:</p>
+    <p>Messi es el mejor asistente y goleador de la historia del fútbol por lo siguiente:</p>
 
 
 
@@ -41,7 +41,7 @@
 
 
 
-    <p> Lionel Andrés Messi Cuccittini es considerado por muchoes el mejor jugador de la historia del fútbol. A lo largo de su carrera ha ganado cuatro champions, ha sido varias veces bota de oro, y ha ganado 6 blones de oro, superando a Cristiano Ronaldo, quien tiene 5.</p>
+    <p> Lionel Andrés Messi Cuccittini es considerado por muchos como el mejor jugador de la historia del fútbol. A lo largo de su carrera ha ganado cuatro champions, ha sido varias veces bota de oro, y ha ganado 6 blones de oro, superando a Cristiano Ronaldo, quien tiene 5.</p>
 
 
 
