--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 
   <script src="scripts/main.js"></script>
 
+   <div class="body">
+	<img src="https://www.gifsanimados.org/data/media/418/pelota-imagen-animada-0044.gif">
+	<div class="zona_boton">
+		<input type="button" id="boton">	
+	</div>
+    </div>
   </body>
 
 </html>
