--- a/index.html
+++ b/index.html
@@ -50,12 +50,21 @@
 
   <script src="scripts/main.js"></script>
 
-   <div class="body">
-	<img src="https://www.gifsanimados.org/data/media/418/pelota-imagen-animada-0044.gif">
-	<div class="zona_boton">
-		<input type="button" id="boton">	
-	</div>
+   <img id="cat" src="https://www.gifsanimados.org/data/media/418/pelota-imagen-animada-0044.gif">
     </div>
-  </body>
-
-</html>
+   
+  <script>
+   var catEl = document.getElementById("cat");
+ 
+  var startTime = new Date().getTime();
+  var walkTheCat = function() {
+      var currTime = new Date().getTime();
+      var secondsElapsed = ((currTime - startTime)/1000);
+   var newLeft= secondsElapsed*77 + "px";
+    catEl.style.left= newLeft;
+    window.requestAnimationFrame(walkTheCat);
+  };
+  walkTheCat();
+	
+	
+	
