--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <p>Pincha en este enlace <a href="  https://es.wikipedia.org/wiki/Anexo:Estadísticas_de_Lionel_Messi"</a> "Messi"</a> para ver las estadísticas de Messi.</p>
   <button>Change user</button>
 
+	 <img id="cat" src="https://www.gifsanimados.org/data/media/418/pelota-imagen-animada-0044.gif">
   <script src="scripts/main.js"></script>
 
   
