--- a/index.html
+++ b/index.html
@@ -48,8 +48,25 @@
     <p>Pincha en este enlace <a href="  https://es.wikipedia.org/wiki/Anexo:Estadísticas_de_Lionel_Messi"</a> "Messi"</a> para ver las estadísticas de Messi.</p>
   <button>Change user</button>
 
+	<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Derivado de "Desafío: pasarela"</title>
+        <style>
+            #cat {
+                position: absolute;
+                left: 0px;
+            }
+        </style>
+    </head>
+    <body>
+    <div>
+        <!-- Cat walking GIF from: http://www.anniemation.com/clip_art/graphics.html -->
+         <img id="cat" src="https://www.gifsanimados.org/data/media/418/pelota-imagen-animada-0044.gif">
+    </div>
+    
 	 
-  <img id="cat" src="https://www.gifsanimados.org/data/media/418/pelota-imagen-animada-0044.gif">
+ 
   <script src="scripts/main.js"></script>
 
     </div>
