--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <h1>Messi es mejor que Cristiano, asúmelo</h1>
 
-    <img src="images/Messi.png" alt= <img src= "images/Cristiano.png">
+    <img src="images/Messi.png" alt= <img src= "images/Cristiano.png" width="170">
     <p> Este es el mejor gol de Messi, contra el Getafe, en el cual parte de su campo regateando a todos los jugadores hasta definir a puerta vacía:</p>
     <div align="center"><iframe src="https://giphy.com/embed/2HavnYT1BfENa" width="400" height="180" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p></div align="center">
     <div align="left"><p>Esta es una imagen que personalmente me encanta, en la que messi sale con sus 6 balones de oro:</p>
